change of the title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>sherry's test two</title>
+  <title>sherry's</title>
   <link rel="stylesheet" type="css" href="designforpersonalarchive.css">
    <style type="text/css">
     /* unvisited link */
