--- a/coding-from-life/sketch-1/index.html
+++ b/coding-from-life/sketch-1/index.html
@@ -15,11 +15,21 @@
       <div class="book-three"></div>
       <div class="cup"></div>
       <div class="mainstick"></div>
+      <div class="mainstick2"></div>
+      <div class="mainstick3"></div>
+      <div class="mainstick4"></div>
+      <div class="leaf1"></div>
+      <div class="leaf2"></div>
+      <div class="flower"></div>
+      <div class="flower2"></div>
+      <div class="flower3"></div>
+      <div class="flower4"></div>
+      <div class="cupstand"></div>
+      <div class="cupbottom"></div>
       <div class="fruit-1"></div>
       <div class="fruit-2"></div>
       <div class="fruit-3"></div>
-      <div class="flower"></div>
-
+      <div class="pieappleleaf1"></div>
       
     </div>
 
