create new link

--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@ a:active {
   <h2><a href="///Users/liang/Desktop/personal_archive/project_1_programme/jmail.html" target="_blank">Project 1 : Jmail</a></h2>
   </section>
   <section>
+  <h2><a href="/Users/liang/Desktop/personal_archive/coding-from-life/sketch-1/index.html" target="_blank">coding from life 1</a></h2>
+  <section>
   <h2><a href="/Users/liang/Desktop/personal_archive/concretetweet/---.html" target="_blank">Project 2</a></h2>
   </section>
+  
   
 </body>
 </html>
