change of the link

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@ a:active {
   
   <h1>Sherry's</h1>
   <section>
-  <h2><a href="/Users/liang/Desktop/personal_archive/concretetweet/growing on the way.html" target="_blank">Concrete Tweet</a></h2>
+  <h2><a href="/Users/liang/Desktop/personal_archive/concretetweet/growing on the way.html" >Concrete Tweet</a></h2>
   </section>
   <section>
-  <h2><a href="///Users/liang/Desktop/personal_archive/project_1_programme/jmail.html" target="_blank">Project 1 : Jmail</a></h2>
+  <h2><a href="///Users/liang/Desktop/personal_archive/project_1_programme/jmail.html" >Project 1 : Jmail</a></h2>
   </section>
   <section>
-  <h2><a href="/Users/liang/Desktop/personal_archive/coding-from-life/sketch-1/index.html" target="_blank">coding from life 1</a></h2>
+  <h2><a href="/Users/liang/Desktop/personal_archive/coding-from-life/sketch-1/index.html" >coding from life 1</a></h2>
   <section>
   <h2><a href="/Users/liang/Desktop/personal_archive/concretetweet/---.html" target="_blank">Project 2</a></h2>
   </section>
