--- a/concretetweet/growing_on_the_way.html
+++ b/concretetweet/growing_on_the_way.html
@@ -48,7 +48,7 @@ a:active {
     <ul>
     <h3>
       <li> <a href=" /Users/liang/Desktop/personal_archive/concretetweet/curiosity.html">curiosity</a>
-      <li> <a href="/Users/liang/Desktop/personal_archive/concretetweet/care from parents.html">care from parents</a>
+      <li> <a href="/Users/liang/Desktop/personal_archive/concretetweet/care_from_parents.html">care from parents</a>
       <li> <a href="/Users/liang/Desktop/personal_archive/concretetweet/friendship.html">friendships</a>
     </h3>  
     </ul>
