--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ a:hover {
     text-decoration: none;
 }
 
+
 /* selected link */
 a:active {
     color: black;
@@ -34,15 +35,15 @@ a:active {
   
   <h1>Sherry's</h1>
   <section>
-  <h2><a href="/Users/liang/Desktop/personal_archive/concretetweet/growing on the way.html" >Concrete Tweet</a></h2>
+  <h2><a href="concretetweet/growing_on_the_way.html" >Concrete Tweet</a></h2>
   </section>
   <section>
-  <h2><a href="///Users/liang/Desktop/personal_archive/project_1_programme/jmail.html" >Project 1 : Jmail</a></h2>
+  <h2><a href="project_1_programme/jmail.html" >Project 1 : Jmail</a></h2>
   </section>
   <section>
-  <h2><a href="/Users/liang/Desktop/personal_archive/coding-from-life/sketch-1/index.html" >coding from life 1</a></h2>
+  <h2><a href="coding-from-life/sketch-1/coding_from_life.html" >coding from life 1</a></h2>
   <section>
-  <h2><a href="/Users/liang/Desktop/personal_archive/concretetweet/---.html" target="_blank">Project 2</a></h2>
+  <h2><a href="concretetweet/---.html" target="_blank">Project 2</a></h2>
   </section>
   
   
