--- a/concretetweet/friendship.html
+++ b/concretetweet/friendship.html
@@ -34,32 +34,32 @@ a:active {
 <body>
 <div class="background">
 <h1>friendship</h1>
-<img src="/Users/liang/Desktop/personal_archive/concretetweet/childhood friends.jpg"/>
+<img src="concretetweet/childhood friends.jpg"/>
 <footer>
   <nav>
     <section>
     <h2>childhood</h2>
     <h3>
-    <li><a href=" /Users/liang/Desktop/personal_archive/concretetweet/curiosity.html">curiosity</a>
-    <li><a href="/Users/liang/Desktop/personal_archive/concretetweet/care_from_parents.html">care from parents</a>
-    <li><a href="/Users/liang/Desktop/personal_archive/concretetweet/friendship.html">friendships</a>
+    <li><a href="concretetweet/curiosity.html">curiosity</a>
+    <li><a href="concretetweet/care_from_parents.html">care from parents</a>
+    <li><a href="concretetweet/friendship.html">friendships</a>
     </h3>
     </section><section>
     <h2>youth</h2>
     <h3>
-    <li><a href="/Users/liang/Desktop/personal_archive/concretetweet/independence.html">independence</a>
-    <li><a href="/Users/liang/Desktop/personal_archive/concretetweet/adventure.html">adventure</a>
-    <li><a href="/Users/liang/Desktop/personal_archive/concretetweet/love.html">young love</a>
+    <li><a href="concretetweet/independence.html">independence</a>
+    <li><a href="concretetweet/adventure.html">adventure</a>
+    <li><a href="concretetweet/love.html">young love</a>
     </h3>
     </section><section><div class="adult">
     <h2>parentage</h2>
     <h3>
-    <li><a href="/Users/liang/Desktop/personal_archive/concretetweet/working.html">working</a>
-    <li><a href="/Users/liang/Desktop/personal_archive/concretetweet/parentage.html">parentage</a>
+    <li><a href="concretetweet/working.html">working</a>
+    <li><a href="concretetweet/parentage.html">parentage</a>
      </h3>
      </div></section>
      <h4>
-    <a href="/Users/liang/Desktop/personal_archive/concretetweet/growing on the way.html">home</a>
+    <a href="concretetweet/growing on the way.html">home</a>
     </h4>
   </nav>
 </footer>
