--- a/project2/disgestion.html
+++ b/project2/disgestion.html
@@ -2,6 +2,8 @@
   <head>
   <title>project2</title>
   <link rel="stylesheet" type="text/css" href="digestion.css">
+  <script src="jquery.js"></script>
+    <script src="script.js"></script>
   </head>
   <body>
    <div class="frame">
@@ -14,6 +16,10 @@
     <div class="box7"></div>
     <div class="box8"></div>
     <div class="box9"></div>
+    <div class="testfruit"><div class="circle"></div><div class="stick"></div></div>
+    <div class="testbox1"></div>
+    <div class="testbox2"></div>
+    <div class="testbox3"></div>
    </div>
   </body>
 </html>
