--- a/project_1_programme/jmail.html
+++ b/project_1_programme/jmail.html
@@ -13,7 +13,7 @@
        <h5>Sent Items</h5>
     </div>
   </div>
-     <img src="project_1_programme/readmessage.png">
+     <img src="readmessage.png">
   
  <div class="inbox">
   <a href="mywill.html">
