--- a/project_1_programme/aboutemma.html
+++ b/project_1_programme/aboutemma.html
@@ -23,12 +23,12 @@
        <div class="time">Mon 12/11 1815</div>
        <div class="jmailcom">jane.austen@jmail.com</div>
     </div>
-    <img src="///Users/liang/Desktop/personal_archive/project_1_programme/J.png" width="60" height="50" style="position: relative; bottom: 455px;"/>
+    <img src="J.png" width="60" height="50" style="position: relative; bottom: 455px;"/>
     
     
    
-   	<img src="////Users/liang/Desktop/personal_archive/project_1_programme/emma manuscript.jpg" width="300" height="400" style="position: relative; right:20px;" />
-   	<img src="/Users/liang/Desktop/personal_archive/project_1_programme/emma sketch.jpg" width="300" height="400" style="position: relative; left:50px;"/>
+   	<img src="emma manuscript.jpg" width="300" height="400" style="position: relative; right:20px;" />
+   	<img src="emma sketch.jpg" width="300" height="400" style="position: relative; left:50px;"/>
    
    
      <p>Dear Sir</p>
