--- a/project_1_programme/goodluckinnewcountry.html
+++ b/project_1_programme/goodluckinnewcountry.html
@@ -23,7 +23,7 @@
        <div class="time">Sat 7/3 1813</div>
        <div class="jmailcom">jane.austen@jmail.com</div>
     </div>
-    <img src="///Users/liang/Desktop/personal_archive/project_1_programme/J.png"/>
+    <img src="J.png"/>
      <p>My dearest Frank</p>
      </br>
      <p>Behold me going to write you as handsome a letter as I can! Wish me good luck. We have had the pleasure of hearing from you lately through Mary, who sent us some of the particulars of yours of June 18 (I think), written off Rugen, and we enter into the delight of your having so good a pilot. Why are you like Queen Elizabeth? Because you know how to chose wise ministers. Does not this prove you as great a Captain as she was a Queen? This may serve as a riddle for you to put forth among your officers, by way of increasing your proper consequence. It must be a real enjoyment to you, since you are obliged to leave England, to be where you are, seeing something of a new country and one which has been so distinguished as Sweden. You must have great pleasure in it. I hope you may have gone to Carlscroon. Your profession has its douceurs to recompense for some of its privations; to an enquiring and observing mind like yours such douceurs must be considerable. Gustavus Vasa, and Charles XII., and Cristina and Linneus. Do their ghosts rise up before you? I 
