--- a/project_1_programme/gownandbonnet.html
+++ b/project_1_programme/gownandbonnet.html
@@ -23,9 +23,9 @@
        <div class="time">Tue 5/5  1801</div>
        <div class="jmailcom">jane.austen@jmail.com</div>
     </div>
-    <img src="///Users/liang/Desktop/personal_archive/project_1_programme/J.png" width="60" height="50" style="position:relative; bottom: 555px;"/>
-    <img src="/Users/liang/Desktop/personal_archive/project_1_programme/gown sketch.jpg" width="350" height="500" style="position:relative; right:20px;"/>
-    <img src="/Users/liang/Desktop/personal_archive/project_1_programme/bonnet sketch.jpg" wid="300" height="450" style="position:relative; bottom:50px;"/>
+    <img src="J.png" width="60" height="50" style="position:relative; bottom: 555px;"/>
+    <img src="gown sketch.jpg" width="350" height="500" style="position:relative; right:20px;"/>
+    <img src="bonnet sketch.jpg" wid="300" height="450" style="position:relative; bottom:50px;"/>
      <p>My dearest Cassandra</p>
      </br>
      <p>I have the pleasure of writing from my own room up two pair of stairs, with everything very comfortable about me.</p>
