--- a/project_1_programme/routine.html
+++ b/project_1_programme/routine.html
@@ -23,7 +23,7 @@
        <div class="time">Thu  1/16  1796</div>
        <div class="jmailcom">jane.austen@jmail.com</div>
     </div>
-    <img src="///Users/liang/Desktop/personal_archive/project_1_programme/J.png"/>
+    <img src="J.png"/>
     <p>My dearest Cassandra</p>
     </br>
     <p>I have just received yours and Mary's letter, and I thank you both, though their contents might have been more agreeable. I do not at all expect to see you on Tuesday, since matters have fallen out so pleasantly; and if you are not able to return till after that day, it will hardly be possible for us to send for you before Saturday, though for my own part I care so little about the ball that it would be no sacrifice to me to give it up for the sake of seeing you two days earlier. We are extremely sorry for poor Eliza's illness. I trust, however, that she has continued to recover since you wrote, and that you will none of you be the worse for your attendance on her. What a good-for-nothing fellow Charles is to bespeak the stockings! I hope he will be too hot all the rest of his life for it!</p>
