--- a/project_1_programme/weareallfine.html
+++ b/project_1_programme/weareallfine.html
@@ -24,8 +24,8 @@
        <div class="jmailcom">jane.austen@jmail.com</div>
     </div>
     
-    <img src="///Users/liang/Desktop/personal_archive/project_1_programme/J.png" width="60" height="50" style="position:relative; bottom: 555px;"/>
-    <img src="/Users/liang/Desktop/personal_archive/project_1_programme/pathway sketch.jpg" width="800" height="500" style="position:relative; bottom: 30px;"/>
+    <img src="J.png" width="60" height="50" style="position:relative; bottom: 555px;"/>
+    <img src="pathway sketch.jpg" width="800" height="500" style="position:relative; bottom: 30px;"/>
     
     <p>My dearest Cassandra</p>
     </br>
