--- a/concretetweet/growing_on_the_way.html
+++ b/concretetweet/growing_on_the_way.html
@@ -47,9 +47,9 @@ a:active {
   <div class="section">
     <ul>
     <h3>
-      <li> <a href="concretetweet/curiosity.html">curiosity</a>
-      <li> <a href="concretetweet/care_from_parents.html">care from parents</a>
-      <li> <a href="concretetweet/friendship.html">friendships</a>
+      <li> <a href="curiosity.html">curiosity</a>
+      <li> <a href="care_from_parents.html">care from parents</a>
+      <li> <a href="friendship.html">friendships</a>
     </h3>  
     </ul>
     </div>
@@ -63,9 +63,9 @@ a:active {
     <div class="section">
     <ul>
     <h3>
-      <li> <a href="concretetweet/independence.html">independence</a>
-      <li> <a href="concretetweet/adventure.html">adventure</a>
-      <li> <a href="concretetweet/love.html">young love</a>
+      <li> <a href="independence.html">independence</a>
+      <li> <a href="adventure.html">adventure</a>
+      <li> <a href="love.html">young love</a>
     </h3>
     </ul>
     </div>
@@ -78,8 +78,8 @@ a:active {
     <div class="section">
      <ul>
      <h3>
-       <li> <a href="concretetweet/working.html">working</a>
-       <li> <a href="concretetweet/parentage.html">parentage</a>
+       <li> <a href="working.html">working</a>
+       <li> <a href="parentage.html">parentage</a>
      </h3>
      </ul>
      </div>
