--- a/project_1_programme/mywill.html
+++ b/project_1_programme/mywill.html
@@ -23,7 +23,7 @@
        <div class="time">Apr 27, 1817</div>
        <div class="jmailcom">jane.austen@jmail.com</div>
     </div>
-    <img src="///Users/liang/Desktop/personal_archive/project_1_programme/J.png"/>
+    <img src="J.png"/>
      <p>I JANE AUSTEN  of the Parish of Chawton do by this my last Will and testament give and bequeath to my dearest sister Cassandra Eliz’th every thing of which I may die possessed or which may herafter be due to me subject to the payment of my funeral expenses and to a legacy of 50 pounds to my brother Henry and 50 pounds to Mde Bijion
 which I request may be paid as soon as convenient and I appoint my said dear sister EXECUTRIX of this my last Will and testament.</p>
   </div>
