hope code will work

--- a/coding-from-life/sketch-1/coding_from_life.html
+++ b/coding-from-life/sketch-1/coding_from_life.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Coding from Life</title>
-    <link rel="stylesheet" href="design.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
 
