--- a/concretetweet/love.html
+++ b/concretetweet/love.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>love</title>
-  <link rel="stylesheet" type="css" href="design for other pages.css">
+  <link rel="stylesheet" type="text/css" href="design for other pages.css">
    <style type="text/css">
     /* unvisited link */
 a{
