--- a/project_1_programme/aboutemma.html
+++ b/project_1_programme/aboutemma.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>About Emma</title>
-  <link rel="stylesheet" type="css" href="aboutemma.css">
+  <link rel="stylesheet" type="text/css" href="aboutemma.css">
 </head>
 <body>
 
