--- a/project_1_programme/goodluckinnewcountry.html
+++ b/project_1_programme/goodluckinnewcountry.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Good luck in new country</title>
-  <link rel="stylesheet" type="css" href="goodluckinnewcountry.css">
+  <link rel="stylesheet" type="text/css" href="goodluckinnewcountry.css">
 </head>
 <body>
 
