--- a/project_1_programme/gownandbonnet.html
+++ b/project_1_programme/gownandbonnet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Gown & Bonnet</title>
-  <link rel="stylesheet" type="css" href="gownandbonnet.css">
+  <link rel="stylesheet" type="text/css" href="gownandbonnet.css">
 </head>
 <body>
 
