--- a/project_1_programme/mywill.html
+++ b/project_1_programme/mywill.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>My will</title>
-  <link rel="stylesheet" type="css" href="mywill.css">
+  <link rel="stylesheet" type="text/css" href="mywill.css">
 </head>
 <body>
 
