--- a/project_1_programme/routine.html
+++ b/project_1_programme/routine.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Routine</title>
-  <link rel="stylesheet" type="css" href="routine.css">
+  <link rel="stylesheet" type="text/css" href="routine.css">
 </head>
 <body>
 
