--- a/project_1_programme/weareallfine.html
+++ b/project_1_programme/weareallfine.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>We are all fine</title>
-  <link rel="stylesheet" type="css" href="weareallfine.css">
+  <link rel="stylesheet" type="text/css" href="weareallfine.css">
 </head>
 <body>
 
