--- a/project_1_programme/jmail.html
+++ b/project_1_programme/jmail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Jmail</title>
-  <link rel="stylesheet" type="css" href="jmaildesign.css">
+  <link rel="stylesheet" type="text/css" href="jmaildesign.css">
 </head>
 <body>
   <div class="header">
@@ -13,7 +13,7 @@
        <h5>Sent Items</h5>
     </div>
   </div>
-     <img src="readmessage.png">
+     <img src="project_1_programme/readmessage.png">
   
  <div class="inbox">
   <a href="mywill.html">
