--- a/project_1_programme/notexist2.html
+++ b/project_1_programme/notexist2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>error!</title>
-  <link rel="stylesheet" type="css" href="notexist2.css">
+  <link rel="stylesheet" type="text/css" href="notexist2.css">
 </head>
 <body>
 
