--- a/project2/project2.html
+++ b/project2/project2.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="project2.css">
 </head>
 <body>
+
   <div class="cherry"></div>
   <div class="icecream">
     <div class="icecream1"></div>
@@ -16,9 +17,19 @@
     <div class="icecream6"></div>
     <div class="icecream7"></div>
     <div class="icecream8"></div>
-    <div class="icecream9"></div>
-    <div class="icecream10"></div>
   </div>
+  <div class="tableware">
+    <div class="tableware1"></div>
+    <div class="tableware2"></div>
+    <div class="tableware3"></div>
+    <div class="tableware4"></div>
+    <div class="tableware5"></div>
+    <div class="tableware6"></div>
+    <div class="tableware7"></div>
+    <div class="tableware8"></div>
+    
+  </div
+ 
 
 </body>
 </html>
