--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ a:active {
   <section>
   <h2><a href="coding-from-life/sketch-1/coding_from_life.html" >coding from life 1</a></h2>
   <section>
-  <h2><a href="concretetweet/---.html" target="_blank">Project 2</a></h2>
+  <h2><a href="project2/project2.html" target="_blank">Project 2: Digestive System</a></h2>
   </section>
   
   
