--- a/project2/project2.html
+++ b/project2/project2.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <head>
-  <title>typeface</title>
+  <title>typeface</title> 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="project2.js"></script>
-  <script src="jquery.js"></script>
+ 
   <link rel="stylesheet" type="text/css" href="project2.css">
 </head>
 <body>
 
-  <div class="cherry"></div>
+  <div class="cherry">
+     <div class="circle"></div>
+     <div class="stick"></div>
+  </div>
   <div class="icecream">
     <div class="icecream1"></div>
     <div class="icecream2"></div>
@@ -19,16 +23,36 @@
     <div class="icecream8"></div>
   </div>
   <div class="tableware">
-    <div class="tableware1"></div>
-    <div class="tableware2"></div>
-    <div class="tableware3"></div>
-    <div class="tableware4"></div>
-    <div class="tableware5"></div>
-    <div class="tableware6"></div>
-    <div class="tableware7"></div>
-    <div class="tableware8"></div>
+    <div class="fork">
+      <div class="tableware1"></div>
+      <div class="tableware2"></div>
+      <div class="tableware3"></div>
+      <div class="tableware4"></div>
+      <div class="tableware5"></div>
+    </div>
+    <div class="knife">
+      <div class="tableware6"></div>
+      <div class="tableware7"></div>
+      
+    </div>
+    <div class="spoon">
+      <div class="tableware8"></div>
+      <div class="tableware9"></div>
+    </div>
     
-  </div
+  </div>
+  <div class="mouth">
+    <div class="lip">
+      <div class="lip1"></div>
+      <div class="lip2"></div>
+      <div class="lip3"></div>
+      <div class="lip4"></div>
+      <div class="lip5"></div>
+      <div class="lip6"></div>
+      <div class="lip7"></div>
+    </div>
+    <div class="tongue"></div>
+  </div>
  
 
 </body>
