--- a/project2/project2.html
+++ b/project2/project2.html
@@ -33,7 +33,6 @@
     <div class="knife">
       <div class="tableware6"></div>
       <div class="tableware7"></div>
-      
     </div>
     <div class="spoon">
       <div class="tableware8"></div>
@@ -50,9 +49,75 @@
       <div class="lip5"></div>
       <div class="lip6"></div>
       <div class="lip7"></div>
+      <div class="lip8"></div>
+      <div class="lip9"></div>
+      <div class="lip10"></div>
+      <div class="lip11"></div>
+      <div class="lip12"></div>
+      <div class="lip13"></div>
     </div>
-    <div class="tongue"></div>
-  </div>
+    <div class="tongue">
+      <div class="tongue1"></div>
+      <div class="tongue2"></div>
+      <div class="tongue3"></div>
+      <div class="tongue4"></div>
+      <div class="tongue5"></div>
+      <div class="tongue6"></div>
+      <div class="tongue7"></div>
+    </div>
+    <div class="mouthtube">
+      <div class="mouthtube1"></div>
+      <div class="mouthtube2"></div>
+      <div class="mouthtube3"></div>
+      <div class="mouthtube4"></div>
+      <div class="mouthtube5"></div>
+      <div class="mouthtube6"></div>
+    </div>
+   </div>
+    <div class="i">
+      <div class="side1"></div>
+      <div class="i1"></div>
+      <div class="i2"></div>
+      <div class="i3"></div>
+      <div class="i4"></div>
+      <div class="i5"></div>
+      <div class="i6"></div>
+      <div class="i7"></div>
+      <div class="i8"></div>
+      <div class="i9"></div>
+      <div class="i10"></div>
+    </div>
+    <div class="stomache">
+      <div class="stomachetube">
+        <div class="stomachetube1"></div>
+        <div class="stomachetube2"></div>
+        <div class="stomachetube3"></div>
+      </div>
+        <div class="stomache1"></div>
+        <div class="stomache2"></div>
+        <div class="stomache3"></div>
+        <div class="stomache4"></div>
+        <div class="stomache5"></div>
+        <div class="stomache6"></div>
+        <div class="stomache7"></div>
+        <div class="stomache8"></div>
+        <div class="stomache9"></div>
+        <div class="stomache10"></div>
+        <div class="stomachetop"></div>
+    </div>
+    <div class="h">
+        <div class="h1"></div>
+        <div class="h2"></div>
+        <div class="h3"></div>
+        <div class="h4"></div>
+        <div class="h5"></div>
+        <div class="h6"></div>
+        <div class="h7"></div>
+        <div class="h8"></div>
+        <div class="h9"></div>
+        <div class="h10"></div>
+        <div class="h11"></div>
+    </div>
  
 
 </body>
