--- a/project2/project2.html
+++ b/project2/project2.html
@@ -233,6 +233,106 @@
       <div class="smallintestine88"></div>
       <div class="smallintestine89"></div>
       <div class="smallintestine90"></div>
+      <div class="smallintestine91"></div>
+      <div class="smallintestine92"></div>
+      <div class="smallintestine93"></div>
+      <div class="smallintestine94"></div>
+      <div class="smallintestine95"></div>
+      <div class="smallintestine96"></div>
+      <div class="smallintestine97"></div>
+      <div class="smallintestine98"></div>
+      <div class="smallintestine99"></div>
+      <div class="smallintestine100"></div>
+      <div class="smallintestine101"></div>
+      <div class="smallintestine102"></div>
+      <div class="smallintestine103"></div>
+      <div class="smallintestine104"></div>
+      <div class="smallintestine105"></div>
+      <div class="smallintestine106"></div>
+      <div class="smallintestine107"></div>
+      <div class="smallintestine108"></div>
+      <div class="smallintestine109"></div>
+      <div class="smallintestine110"></div>
+      <div class="smallintestine111"></div>
+      <div class="smallintestine112"></div>
+      <div class="smallintestine113"></div>
+      <div class="smallintestine114"></div>
+      <div class="smallintestine115"></div>
+      <div class="smallintestine116"></div>
+      <div class="smallintestine117"></div>
+      <div class="smallintestine118"></div>
+      <div class="smallintestine119"></div>
+      <div class="smallintestine120"></div>
+      <div class="smallintestine121"></div>
+      <div class="smallintestine122"></div>
+      <div class="smallintestine123"></div>
+      <div class="smallintestine124"></div>
+      <div class="smallintestine125"></div>
+      <div class="smallintestine126"></div>
+      <div class="smallintestine127"></div>
+      <div class="smallintestine128"></div>
+      <div class="smallintestine129"></div>
+      <div class="smallintestine130"></div>
+      <div class="smallintestine131"></div>
+      <div class="smallintestine132"></div>
+      <div class="smallintestine133"></div>
+      <div class="smallintestine134"></div>
+      <div class="smallintestine135"></div>
+      <div class="smallintestine136"></div>
+      <div class="smallintestine137"></div>
+      <div class="smallintestine138"></div>
+      <div class="smallintestine139"></div>
+      <div class="smallintestine140"></div>
+      <div class="smallintestine141"></div>
+      <div class="smallintestine142"></div>
+      <div class="smallintestine143"></div>
+      <div class="smallintestine144"></div>
+      <div class="smallintestine145"></div>
+      <div class="smallintestine146"></div>
+      <div class="smallintestine147"></div>
+      <div class="smallintestine148"></div>
+      <div class="smallintestine149"></div>
+      
+      <div class="smallintestine154"></div>
+      <div class="smallintestine155"></div>
+      <div class="smallintestine156"></div>
+      <div class="smallintestine157"></div> 
+      <div class="coli">
+          <div class="coli1"></div>
+          <div class="coli2"></div>
+          <div class="coli3"></div>
+          <div class="coli4"></div>
+          <div class="coli5"></div>
+          <div class="coli6"></div>
+          <div class="coli7"></div>
+          <div class="coli8"></div>
+          <div class="coli9"></div>
+          <div class="coli10"></div>
+          <div class="coli11"></div>
+          <div class="coli12"></div>
+          <div class="coli13"></div>
+          <div class="coli14"></div>
+          <div class="coli15"></div>
+          <div class="coli16"></div>
+          <div class="coli17"></div>
+          <div class="coli18"></div>
+          <div class="coli19"></div>
+          <div class="coli20"></div>
+          <div class="coli21"></div>
+          <div class="coli22"></div>
+          <div class="coli23"></div>
+          <div class="coli24"></div>
+          <div class="coli25"></div>
+          <div class="coli26"></div>
+          <div class="coli27"></div>
+        </div>
+        <div class="eup">
+        <div class="eup1"></div>
+        <div class="eup2"></div>
+      </div>
+      <div class="edown"></div>
+      <div class="h1"></div>
+      <div class="h2"></div>
       <div class="villi1"></div>
       <div class="villi2"></div>
       <div class="villi3"></div>
@@ -242,7 +342,16 @@
          <div class="gall2"></div>
       </div>
     </div>
-
+    <div class="shit1"></div>
+    <div class="shit2">
+      <div class="s2"></div>
+      <div class="s3"></div>
+    </div>
+    <div class="shit3">
+      <div class="s4"></div>
+      <div class="s5"></div>
+    </div>
+    <div class="box"></div>
    
  
 
