--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@ a:active {
   
   <h1>Sherry's</h1>
   <section>
-  <h2><a href="concretetweet/growing_on_the_way.html" >Concrete Tweet</a></h2>
+  <h2><a href="concretetweet/growing_on_the_way.html" target="_blank">Concrete Tweet</a></h2>
   </section>
   <section>
-  <h2><a href="project_1_programme/jmail.html" >Project 1 : Jmail</a></h2>
+  <h2><a href="project_1_programme/jmail.html" target="_blank">Project 1 : Jmail</a></h2>
   </section>
   <section>
-  <h2><a href="coding-from-life/sketch-1/coding_from_life.html" >coding from life 1</a></h2>
+  <h2><a href="coding-from-life/sketch-1/coding_from_life.html" target="_blank">coding from life 1</a></h2>
   <section>
   <h2><a href="project2/project2.html" target="_blank">Project 2: Digestive System</a></h2>
   </section>
