--- a/project_1_programme/aboutemma.html
+++ b/project_1_programme/aboutemma.html
@@ -10,6 +10,7 @@
      <h2>New</h2>
      <h2>Delect</h2>
      <h2>Mark</h2>
+     <a href="jmail.html"><h2>Clean</h2></a>
      <h5>Sent Items</h5>
   </div>
   
@@ -26,9 +27,8 @@
     <img src="J.png" width="60" height="50" style="position: relative; bottom: 455px;"/>
     
     
-   
-   	<img src="emma manuscript.jpg" width="300" height="400" style="position: relative; right:20px;" />
-   	<img src="emma sketch.jpg" width="300" height="400" style="position: relative; left:50px;"/>
+
+   	<img src="emma sketch.jpg" width="300" height="400" style="position: relative; left:200px;"/>
    
    
      <p>Dear Sir</p>
