--- a/project_1_programme/notexist2.html
+++ b/project_1_programme/notexist2.html
@@ -10,6 +10,7 @@
      <h2>New</h2>
      <h2>Delect</h2>
      <h2>Mark</h2>
+     <a href="jmail.html"><h2>Clean</h2></a>
      <h5>Sent Items</h5>
   </div>
   
