--- a/concretetweet/curiosity.html
+++ b/concretetweet/curiosity.html
@@ -58,7 +58,7 @@ a:active {
     <li><a href="parentage.html">parentage</a>
     </div></section>
     <h4>
-    <a href="growing on the way.html">home</a>
+    <a href="growing_on_the_way.html">home</a>
     </h4>
     </div>
   </nav>
